--- a/src/styles/block/footer.scss
+++ b/src/styles/block/footer.scss
@@ -5,12 +5,12 @@
     justify-content: space-around;
     flex-direction: column;
 
-    @include onTablet {
+    @include on-tablet {
       flex-direction: column;
       
     }
 
-    @include onDesktop {
+    @include on-desktop {
       flex-direction: row;
       margin-bottom: 87px;
       padding-right: 100px;
@@ -21,13 +21,12 @@
     display: flex;
     justify-content: space-between;
 
-    @include onTablet {
+    @include on-tablet {
       flex-direction: column;
       justify-content: start;
     }
 
-    @include onDesktop {
-
+    @include on-desktop {
       flex-direction: column;
       gap: 62px;
       margin-right: 137px;
@@ -47,16 +46,15 @@
       transform: scale(1.1);
     }
 
-    @include onTablet {
+    @include on-tablet {
       margin-bottom: 62px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       width: 72px;
       height: 72px;
       margin: 0;
     }
-
   }
 
   &__networks {
@@ -77,11 +75,11 @@
       transform: scale(1.1);
     }
 
-    @include onTablet {
+    @include on-tablet {
       margin-right: 32px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin-right: 22px;
     }
   }
@@ -96,7 +94,6 @@
     &:hover {
       transform: scale(1.1);
     }
-
   }
 
   &__wraper {
@@ -104,15 +101,14 @@
     gap: 30px;
     flex-direction: column;
     
-    @include onTablet {
+    @include on-tablet {
       flex-direction: row;
       gap: 40px;
       margin-bottom: 64px;
       padding-right: 120px;
-
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin: 0;
       gap: 0;
       padding-right: 65px;
@@ -126,7 +122,7 @@
 
   &__text {
     color: $text-color;
-    font-family: IBM Plex Sans, sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
@@ -142,7 +138,7 @@
       }
     }
 
-    @include onTablet {
+    @include on-tablet {
       width: 170px;
     }
 
@@ -155,14 +151,14 @@
     }
 
     &--wicend {
-      @include onDesktop {
+      @include on-desktop {
         font-weight: 600;
       }
     }
   }
 
   &__link {
-    font-family: IBM Plex Sans, sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
@@ -175,7 +171,6 @@
     &:hover {
       transform: scale(1.01);
     }
-
   }
 
   &__weekend {
@@ -183,7 +178,7 @@
     display: block;
     width: 130px;
 
-    @include onDesktop {
+    @include on-desktop {
       width: 170px;
     }
   }
@@ -202,12 +197,12 @@
     height: 1px;
     margin-bottom: 40px;
 
-    @include onTablet {
+    @include on-tablet {
       width: 460px;
       margin: 0 auto 64px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       height: 260px;
       width: 1px;
       margin: 0 65px 0 0;
@@ -227,7 +222,7 @@
     background-position: 50%;
     transition: all 0.3s;
 
-    @include onTablet {
+    @include on-tablet {
       display: none;
     }
   }
@@ -236,11 +231,12 @@
     display: flex;
     margin-bottom: 80px;
     gap: 20px;
-    @include onTablet {
+
+    @include on-tablet {
       margin: 0 auto 120px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       gap: 31px;
       margin: 0;
     }
@@ -254,11 +250,11 @@
       margin-bottom: 20px;
     }
 
-    @include onTablet {
+    @include on-tablet {
       width: 220px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       width: 169px;
     }
   }
@@ -272,7 +268,7 @@
     gap: 20px;
     justify-content: space-between;
 
-    @include onDesktop {
+    @include on-desktop {
       gap: 31px;
     }
   }
@@ -280,7 +276,7 @@
   &__watermark {
     color: $text-color;
     text-align: center;
-    font-family: IBM Plex Sans, sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 12px;
     font-style: normal;
     font-weight: 300;
@@ -290,7 +286,7 @@
       display: flex;
       flex-direction: column;
 
-      @include onTablet {
+      @include on-tablet {
         flex-direction: row;
         justify-content: space-between;
       }
