--- a/src/styles/block/header.scss
+++ b/src/styles/block/header.scss
@@ -1,14 +1,14 @@
 .header {
-
   padding-bottom: 35px;
-  
-  @include onTablet {
+
+  @include on-tablet {
     padding-bottom: 72px;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     padding-bottom: 283px;
   }
+
   &__img {
     background-image: url(../images/header-img.svg);
     background-repeat: no-repeat;
@@ -19,13 +19,13 @@
     width: 100vw;
     height: 300px;
 
-    @include onTablet {
+    @include on-tablet {
       position: absolute;
       width: 50%;
       height: 384px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       width: 725px;
       height: 655px;
     }
@@ -34,7 +34,7 @@
   &__menu {
     margin-top: 33px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 45px;
     }
   }
@@ -62,7 +62,7 @@
       }
     }
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 15px;
       width: 220px;
       left: 0;
@@ -70,7 +70,7 @@
       font-size: 36px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       width: 170px;
     }
   }
@@ -93,7 +93,7 @@
     width: 280px;
     margin: 0 auto;
 
-    @include onTablet {
+    @include on-tablet {
       font-size: 54px;
       width: 340px;
       text-align: start;
@@ -101,7 +101,7 @@
       margin: 0;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       font-size: 72px;
       width: 470px;
       padding: 206px 0 89px;
@@ -118,8 +118,12 @@
       transform: scale(1.01);
     }
 
-    @include onDesktop {
-      margin-left: 187px;
+    @include on-tablet {
+      width: 270px;
+    }
+
+    @include on-desktop {
+      margin-left: 131px;
     }
   }
 
@@ -132,7 +136,7 @@
     width: 100vw;
     text-decoration: none;
   
-    @include onTablet {
+    @include on-tablet {
       height: 70px;
       width: 197px;
     }
@@ -140,7 +144,7 @@
 
   &__flowers {
     color: $text-color;
-    font-family: IBM Plex Sans, sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -156,7 +160,7 @@
     background-color: $color-green;
     background-position: center;
 
-    @include onTablet {
+    @include on-tablet {
       height: 70px;
       width: 70px;
     }
@@ -165,12 +169,11 @@
   &__main {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     margin-left: 14px;
   }
 
   &__event {
-    font-family: IBM Plex Sans, sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
@@ -193,7 +196,7 @@
       background-color: $color-green;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       display: block;
     }
   }
