--- a/src/styles/block/section.scss
+++ b/src/styles/block/section.scss
@@ -6,13 +6,49 @@
     right: 0;
     left: 0;
     width: 100%;
-    background-color: $color-green;
-    transform: translateX(-100%);
+    background-color: #1a5a4c;
     transition: all 0.3s;
     z-index: 2;
+    overflow: auto;
+    height: 100%;
+    transform: translateX(-100%);
+
+    @include on-tablet {
+      height: 300px;
+      position: fixed;
+      top: 0;
+      right: 0;
+      left: 0;
+      width: 100%;
+      overflow: hidden;
+      background-color: $color-green;
+      transform: translateX(-100%);
+      transition: all 0.3s;
+      z-index: 2;
+    }
 
     &:target {
       transform: translateX(0);
     }
   }
 }
+
+// position: fixed;
+// top: 0;
+// right: 0;
+// left: 0;
+// width: 100%;
+// background-color: #1a5a4c;
+// transition: all .3s;
+// z-index: 2;
+// overflow: auto;
+// height: 100%;
+// position: fixed;
+// top: 0;
+// right: 0;
+// left: 0;
+// width: 100%;
+// background-color: $color-green;
+// transform: translateX(-100%);
+// transition: all 0.3s;
+// z-index: 2;
