--- a/src/styles/block/subscription.scss
+++ b/src/styles/block/subscription.scss
@@ -1,11 +1,11 @@
 .subscription {
   margin-bottom: 50px;
 
-  @include onTablet {
+  @include on-tablet {
     margin-bottom: 51px;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     margin-bottom: 48px;
   }
 
@@ -17,12 +17,12 @@
     background-position: center;
     padding: 88px 0;
 
-    @include onTablet {
+    @include on-tablet {
       height: 380px;
       padding: 82px 0;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       height: 550px;
       padding: 163px 0;
     }
@@ -38,7 +38,7 @@
     font-size: 36px;
     margin-bottom: 20px;
 
-    @include onTablet {
+    @include on-tablet {
       font-size: 48px;
       margin-bottom: 16px;
     }
@@ -46,7 +46,7 @@
 
   &__text {
     color: $clor-white;
-    font-family: IBM Plex Sans, sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -54,11 +54,11 @@
     text-align: center;
     margin: 0 0 50px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-bottom: 64px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin-bottom: 72px;
     }
   }
@@ -68,11 +68,11 @@
     justify-content: center;
     gap: 0;
 
-    @include onTablet {
+    @include on-tablet {
       gap: 16px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       gap: 30px;
     }
   }
@@ -89,12 +89,16 @@
     padding-left: 24px;
     border: none;
 
-    @include onTablet {
+    &:focus-visible {
+      outline: none;
+    }
+
+    @include on-tablet {
       width: 374px;
       height: 70px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       width: 470px;
       padding-left: 32px;
     }
@@ -110,7 +114,7 @@
     background-position: center;
     transition: all 0.3s;
 
-    @include onTablet {
+    @include on-tablet {
       width: 70px;
       height: 70px;
     }
