--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,15 +1,14 @@
 @import "utils";
 @import "utils/vars";
-
-@import "block/container.scss";
-@import "block/header.scss";
-@import "block/page.scss";
-@import "block/menu.scss";
-@import "block/section.scss";
-@import "block/event.scss";
-@import "block/gallery.scss";
-@import "block/subscription.scss";
-@import "block/footer.scss";
+@import "block/container";
+@import "block/header";
+@import "block/page";
+@import "block/menu";
+@import "block/section";
+@import "block/event";
+@import "block/gallery";
+@import "block/subscription";
+@import "block/footer";
 
 body {
   background: $c-gray;
