--- a/src/styles/block/container.scss
+++ b/src/styles/block/container.scss
@@ -1,11 +1,11 @@
 .container {
   padding: 0 20px 128px;
 
-  @include onTablet {
+  @include on-tablet {
     padding: 0 35px 36px;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     padding: 0 55px 35px;
   }
 }
