--- a/src/styles/block/event.scss
+++ b/src/styles/block/event.scss
@@ -9,11 +9,11 @@
     color: $text-color;
     margin-bottom: 40px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-bottom: 48px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin-bottom: 56px;
     }
 
@@ -39,13 +39,13 @@
         background-color: #f14a27;
       }
 
-      @include onTablet {
+      @include on-tablet {
         margin-bottom: 15px;
         font-size: 36px;
         width: 370px;
       }
 
-      @include onDesktop {
+      @include on-desktop {
         width: 370px;
       }
     }
@@ -74,11 +74,11 @@
       transform: scale(1.1);
     }
 
-    @include onTablet {
+    @include on-tablet {
       width: 100%;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       width: 670px;
       height: 520px;
     }
@@ -90,12 +90,12 @@
     gap: 20px;
     margin-bottom: 60px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-bottom: 60px;
       gap: 40px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin-bottom: 104px;
       flex-direction: row;
       gap: 130px;
@@ -108,17 +108,17 @@
     gap: 25px;
     margin-bottom: 15px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-bottom: 30px;
       justify-content: start;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin-bottom: 32px;
     }
 
     &--steil {
-      font-family: IBM Plex Sans, sans-serif;
+      font-family: "IBM Plex Sans", sans-serif;
       font-style: normal;
       font-weight: 500;
       font-size: 16px;
@@ -129,22 +129,21 @@
   &__exhibi {
     color: #687480;
 
-    @include onTablet {
+    @include on-tablet {
       font-size: 14px;
     }
   }
 
   &__description {
-
-    @include onTablet {
+    @include on-tablet {
       width: 460px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       width: 370px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin: auto 0;
     }
   }
@@ -152,13 +151,13 @@
   &__time {
     color: $color-green;
 
-    @include onTablet {
+    @include on-tablet {
       font-size: 14px;
     }
   }
 
   &__descr {
-    font-family: IBM Plex Sans, sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
     font-weight: 300;
     font-size: 16px;
@@ -177,11 +176,11 @@
     padding: 0;
     margin: 0;
 
-    @include onTablet {
+    @include on-tablet {
       height: 390px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       height: 550px;
     }
 
@@ -192,11 +191,11 @@
       width: 100%;
       margin: 0;
 
-      @include onTablet {
+      @include on-tablet {
         padding: 0 34px;
       }
 
-      @include onDesktop {
+      @include on-desktop {
         padding: 0;
       }
     }
@@ -204,9 +203,7 @@
 }
 
 .lecture {
-
   &__container {
-
     max-width: 570px;
     background-color: $clor-white;
     transform: translateY(-40%);
@@ -214,13 +211,13 @@
     margin: 0 20px 100px;
     box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
 
-    @include onTablet {
+    @include on-tablet {
       padding: 45px 55px 50px;
       width: 570px;
       margin: 0 0 88px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       padding: 45px 100px 50px;
       margin-bottom: 200px;
     }
@@ -231,7 +228,7 @@
     justify-content: space-around;
     align-items: center;
   
-    @include onTablet {
+    @include on-tablet {
       justify-content: space-between;
     }
   }
@@ -242,26 +239,25 @@
     color: $color-green;
     width: 174px;
 
-    @include onTablet {
+    @include on-tablet {
       width: 220px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       width: 170px;
     }
   }
 
   &__lesson {
-
     font-weight: 500;
     line-height: 100%;
     color: #687480;
 
     &--typ {
-      font-family: IBM Plex Sans, sans-serif;
+      font-family: "IBM Plex Sans", sans-serif;
       font-style: normal;
 
-      @include onTablet {
+      @include on-tablet {
         font-size: 14px;
       }
     }
@@ -276,7 +272,7 @@
     color: #0f0e08;
     text-align: center;
 
-    @include onTablet {
+    @include on-tablet {
       font-size: 36px;
       text-align: start;
     }
