--- a/src/styles/block/menu.scss
+++ b/src/styles/block/menu.scss
@@ -1,8 +1,8 @@
 .menu {
   padding-top: 39px;
-  
+  overflow: auto;
 
-  @include onDesktop {
+  @include on-desktop {
     padding: 40px 100px 0 6px;
 
   }
@@ -12,7 +12,7 @@
     justify-content: space-between;
     margin-bottom: 24px;
 
-    @include onTablet {
+    @include on-tablet {
       margin: 0;
     }
   }
@@ -21,7 +21,7 @@
     display: flex;
     flex-direction: column;
 
-    @include onTablet {
+    @include on-tablet {
       justify-content: space-between;
       flex-direction: row;
     }
@@ -34,11 +34,11 @@
     &--margin {
       margin-right: 28px;
 
-      @include onTablet {
+      @include on-tablet {
         margin-right: 20px;
       }
 
-      @include onDesktop {
+      @include on-desktop {
         margin-right: 31px;
       }
     }
@@ -47,11 +47,11 @@
   &__close {
     margin-right: 33px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-right: 44px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin-right: 107px;
     }
   }
@@ -62,7 +62,7 @@
     &:first-child {
       margin-bottom: 24px;
 
-      @include onDesktop {
+      @include on-desktop {
         margin-bottom: 30px;
       }
     }
@@ -73,7 +73,7 @@
     color: $clor-white;
     text-decoration: none;
 
-    font-family: IBM Plex Sans, sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
@@ -81,7 +81,7 @@
     display: block;
     width: 100px;
 
-    @include onDesktop {
+    @include on-desktop {
       width: 160px;
       font-size: 22px;
     }
@@ -92,12 +92,12 @@
     flex-direction: column;
     gap: 16px;
 
-    @include onTablet {
+    @include on-tablet {
       flex-direction: row;
       gap: 38px;
     }
     
-    @include onDesktop {
+    @include on-desktop {
       gap: 30px;
     }
   }
@@ -108,7 +108,7 @@
     height: 1px;
     margin-bottom: 24px;
 
-    @include onTablet {
+    @include on-tablet {
       width: 1px;
       height: 145px;
       margin: 0;
@@ -119,7 +119,7 @@
 .schedule {
 
   &__work {
-    font-family: IBM Plex Sans, sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 14px;
@@ -130,18 +130,18 @@
     &--days {
       margin: 0;
 
-      @include onTablet {
+      @include on-tablet {
         margin-right: 38px;
       }
 
-      @include onDesktop {
+      @include on-desktop {
         margin-right: 30px;
       }
     }
   }
 
   &__dayoff {
-    font-family: IBM Plex Sans, sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -150,14 +150,14 @@
     margin: 0;
     width: 280px;
 
-    @include onTablet {
+    @include on-tablet {
       width: 144px;
     }
   }
 
   &__days {
     color: #fff;
-    font-family: IBM Plex Sans, sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
