--- a/src/styles/block/page.scss
+++ b/src/styles/block/page.scss
@@ -6,16 +6,19 @@
     margin: 0;
     background-color: #fff;
 
+    @include on-desktop {
+      width: 1280px;
+      margin: 0 auto;
+    }
+
     &--with-menu {
-      overflow: hidden;
+      // overflow: hidden;
 
       .background {
         width: 100%;
-        height: 100vh;
+        height: 100%;
         background: #18181a;
         position: absolute;
-        // right: 0;
-        // left: 0;
         opacity: 0.7;
         z-index: 1;
       }
