--- a/src/styles/page/hero.scss
+++ b/src/styles/page/hero.scss
@@ -18,7 +18,8 @@
   &__background {
     max-width: 100vw;
     width: 100%;
-    min-height: 66vh;
+    height: 66vh;
+    max-height: 655px;
 
     background-image: url('../images/hero/hero.jpg');
     background-repeat: no-repeat;
