--- a/src/styles/page/gallery.scss
+++ b/src/styles/page/gallery.scss
@@ -21,6 +21,7 @@
     align-items: center;*/
 
     height: 80vh;
+    max-height: 600px;
     overflow: hidden;
 
     @include onDesktop {
@@ -55,7 +56,7 @@
   @include onDesktop {
     display: grid;
     grid-template-columns: repeat(3, minmax(0, 1fr));
-    grid-template-rows: repeat(3, minmax(0, 320px));
+    grid-template-rows: repeat(3, minmax(0, 300px));
     gap: 30px;
   }
 }
