--- a/src/styles/page/hero.scss
+++ b/src/styles/page/hero.scss
@@ -25,6 +25,10 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+
+    @media ((max-width: 1200px) and (min-height: 800px)) {
+      max-height: 450px;
+    }
   }
 
   &__block {
@@ -77,6 +81,7 @@
       transform: translateX(100%) scale(1.3);
     }
   }
+
   &__title {
     padding: 18px;
     font-weight: $fontWeightMedium;
