--- a/src/styles/page/subscription.scss
+++ b/src/styles/page/subscription.scss
@@ -72,7 +72,12 @@
     gap: 16px;
   }
   &__label {
-    padding: 12px 24px;
+    height: 50px;
+
+    display: flex;
+    justify-content: center;
+
+    padding: 5px 24px;
     background-color: $colorWhite;
 
     @include onTablet {
@@ -82,7 +87,6 @@
   }
 
   &__input {
-
     border: none;
     outline: none;
     color: $colorBlackMain;
