--- a/src/styles/page/subscription.scss
+++ b/src/styles/page/subscription.scss
@@ -67,6 +67,7 @@
 .form-subscription {
   display: flex;
   justify-content: center;
+  align-items: center;
 
   @include onTablet {
     gap: 16px;
