swiper.js updated

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -12,7 +12,5 @@ $columns-on-mobile: 2;
 $columns-on-tablet: 6;
 $columns-on-desktop: 12;
 $montserrat: Montserrat, sans-serif;
-$ibm:
-  IBM Plex Sans,
-  sans-serif;
+$ibm: IBM Plex Sans, sans-serif;
 $swiper-pagination-bottom: 128px;
