--- a/src/styles/generals/generals.scss
+++ b/src/styles/generals/generals.scss
@@ -128,7 +128,9 @@ body {
     top: 0;
     z-index: 11;
 
-    min-height: 100svh;
+    overflow: auto;
+
+    height: 100svh;
     width: 100vw;
 
     background-color: rgba(15, 14, 8, 0.5);
@@ -185,17 +187,44 @@ body {
   }
 
   &__link {
+    position: relative;
+
     font-size: 16px;
     color: $colorWhite;
     font-weight: $fontWeightMedium;
 
     line-height: $lineHeightAdditional;
 
+    &::before{
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: -5px;
+
+      display: block;
+
+      width: 0;
+      height: 1px;
+      background-color: $colorWhite;
+
+      transition-duration: $transitionDuration;
+    }
+
     &--black {
       font-size: 14px;
 
       color: $colorBlackMain;
       font-weight: 400;
+
+      &::before{
+        background-color: $colorBlackMain;
+      }
+    }
+
+    &:hover{
+      &::before{
+        width: 100%;
+      }
     }
   }
 
