--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,81 @@
 h1 {
-  @extend %h1;
+  margin: 0;
+  padding-bottom: 20px;
+
+  @include Montserrat-700;
+
+  font-size: 45px;
+  line-height: 1;
+  text-align: center;
+  text-transform: uppercase;
+
+  @include on-tablet {
+    text-align: left;
+    font-size: 54px;
+    line-height: 1.2;
+    padding-bottom: 38px;
+  }
+
+  @include on-desktop {
+    font-size: 72px;
+    padding-bottom: 0;
+  }
+}
+
+h2 {
+  @include Montserrat-700;
+
+  font-size: 36px;
+  line-height: 36px;
+  text-align: center;
+  margin: 0;
+  padding-bottom: 40px;
+
+  @include on-tablet {
+    font-size: 48px;
+    text-align: left;
+  }
+
+  @include on-desktop {
+    padding-bottom: 56px;
+  }
+}
+
+h3 {
+  font-family: Montserrat, sans-serif;
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 1;
+  text-align: left;
+  position: relative;
+  margin-block: 15px 11px;
+  padding-bottom: 5px;
+
+  @include on-tablet {
+    font-size: 36px;
+  }
+}
+
+a {
+  text-decoration: none;
+  color: $c-black;
+  cursor: pointer;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+p {
+  margin: 0;
+}
+
+.word-wrap {
+  width: 100px;
+}
+
+button {
+  cursor: pointer;
 }
