--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,14 @@
 $c-gray: #eee;
+$c-button-green: #1a5a4c;
+$c-black: #0f0e08;
+$c-white: #ffffff;
+$c-text: #4e4e4e;
+$c-hidden: #687480;
+$c-red: #f14a27;
+$c-shadow: #1a5a4c40;
+
+$mobile-min-width: 320px;
+$tablet-min-width: 640px;
+$desktop-mini-min-width: 1024px;
+$desktop-min-width: 1280px;
+$design-min-width: 1440px;
