--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -27,14 +27,14 @@
 }
 
 @font-face {
-  font-family: 'Montserrat', sans-serif;
+  font-family: Montserrat, sans-serif;
   src: url(../fonts/Montserrat-Regular.ttf);
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Montserrat', sans-serif;
+  font-family: Montserrat, sans-serif;
   src: url(../fonts/Montserrat-Bold.ttf);
   font-weight: 700;
   font-style: normal;
