--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
 @import './fonts';
-@import './utils/_mixins';
-@import './utils/_vars';
+@import './utils/mixins';
+@import './utils/vars';
 @import './typography';
 @import './blocks/main';
 @import './components/page';
