--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -47,13 +47,13 @@
   }
 }
 
-@mixin IBM-Plex-Sans-500 {
-  font-family: IBM Plex Sans;
+@mixin ibm-plex-sans-500 {
+  font-family: 'IBM Plex Sans', sans-serif;
   font-weight: 500;
 }
 
-@mixin Montserrat-700 {
-  font-family: 'Montserrat', sans-serif;
+@mixin montserrat-700 {
+  font-family: Montserrat, sans-serif;
   font-weight: 700;
 }
 
@@ -70,12 +70,5 @@
 
   @include on-desktop {
     --columns: 12;
-  }
-}
-
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.5s;
-  &:hover {
-    #{$_property}: $_toValue;
   }
 }
