--- a/src/styles/utils/vars.scss
+++ b/src/styles/utils/vars.scss
@@ -1,12 +1,11 @@
 $c-gray: #eee;
 $c-button-green: #1a5a4c;
 $c-black: #0f0e08;
-$c-white: #ffffff;
+$c-white: #fff;
 $c-text: #4e4e4e;
 $c-hidden: #687480;
 $c-red: #f14a27;
 $c-shadow: #1a5a4c40;
-
 $mobile-min-width: 320px;
 $tablet-min-width: 640px;
 $desktop-mini-min-width: 1024px;
