--- a/src/styles/blocks/actions.scss
+++ b/src/styles/blocks/actions.scss
@@ -31,7 +31,7 @@
       position: absolute;
       bottom: -100px;
       background-color: $c-white;
-      box-shadow: 0px 2px 0px 0px $c-shadow;
+      box-shadow: 0 2px 0 0 $c-shadow;
 
       @include on-tablet {
         padding: 20px 80px 20px 20px;
@@ -44,7 +44,7 @@
       }
 
       @include on-desktop {
-        padding: 45px 100px 50px 100px;
+        padding: 45px 100px 50px;
         transform: translate(50%, 35%);
       }
 
@@ -109,7 +109,8 @@
   }
 
   &__type {
-    @include IBM-Plex-Sans-500;
+    @include ibm-plex-sans-500;
+
     font-size: 16px;
     line-height: 1;
     color: $c-text;
@@ -122,9 +123,7 @@
 
   &__date {
     color: $c-button-green;
-    font-family:
-      IBM Plex Sans,
-      sans-serif;
+    font-family: 'IBM Plex Sans', sans-serif;
     font-size: 16px;
     font-weight: 700;
     line-height: 24px;
@@ -160,9 +159,7 @@
     width: 100%;
     display: block;
 
-    font-family:
-      IBM Plex Sans,
-      sans-serif;
+    font-family: 'IBM Plex Sans', sans-serif;
     font-size: 16px;
     line-height: 24px;
     text-align: left;
