--- a/src/styles/components/nav.scss
+++ b/src/styles/components/nav.scss
@@ -34,8 +34,7 @@
   &__list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    row-gap: 24px;
-    column-gap: 28px;
+    gap: 24px 28px;
     text-align: left;
     padding-bottom: 24px;
 
@@ -44,8 +43,7 @@
     }
 
     &--footer {
-      row-gap: 20px;
-      column-gap: 20px;
+      gap: 20px;
       padding-block: 40px 80px;
 
       margin: 0 auto;
