--- a/src/styles/blocks/actions.scss
+++ b/src/styles/blocks/actions.scss
@@ -1,5 +1,9 @@
 .actions {
-  padding-bottom: 15rem;
+  padding-bottom: 10rem;
+
+  @include on-tablet {
+    padding-bottom: 15rem;
+  }
 
   @include on-desktop {
     padding-bottom: 20rem;
