--- a/src/styles/blocks/carousel.scss
+++ b/src/styles/blocks/carousel.scss
@@ -7,6 +7,13 @@
     }
   }
 
+  &__container {
+    min-width: 300px;
+    max-width: 768px;
+    display: block;
+    overflow: hidden;
+  }
+
   &__image {
     width: 280px;
     height: 410px;
@@ -23,7 +30,6 @@
     display: flex;
     justify-content: flex-start;
     gap: 20px;
-    overflow: hidden;
   }
 }
 
