--- a/src/styles/components/form.scss
+++ b/src/styles/components/form.scss
@@ -1,7 +1,8 @@
 .form {
   margin-top: 50px;
   display: flex;
-  justify-content: left;
+  justify-content: center;
+  margin-right: 25px;
 
   &__button {
     position: relative;
@@ -17,7 +18,7 @@
       background-position: center;
       background-size: 8px 12px;
       bottom: -2px;
-      left: -1.5px;
+      left: -2px;
 
       @include on-tablet {
         width: 71px;
