--- a/src/styles/components/top-bar.scss
+++ b/src/styles/components/top-bar.scss
@@ -1,4 +1,10 @@
 .top-bar {
+  padding-bottom: 100%;
+
+  @include on-tablet {
+    padding-bottom: 0;
+  }
+
   &__menu-logo {
     display: flex;
 
