--- a/src/styles/blocks/follow.scss
+++ b/src/styles/blocks/follow.scss
@@ -25,6 +25,9 @@
   @include on-tablet {
     margin-inline: -34px;
   }
+  @include on-desktop {
+    margin-inline: -55px;
+  }
 
   &__title {
     padding-bottom: 20px;
