--- a/src/styles/components/form.scss
+++ b/src/styles/components/form.scss
@@ -46,3 +46,12 @@
     line-height: 14px;
   }
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus {
+  border: $c-white;
+  -webkit-text-fill-color: $c-black;
+  -webkit-box-shadow: 0 0 0px 1000px $c-white inset;
+  transition: background-color 5000s ease-in-out 0s;
+}
