--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,13 @@
-$c-gray: #eee;
+$c-grey: #eee;
+$c-green: #1A5A4C;
+$c-white: #fff;
+$c-black: #0F0E08;
+$c-grey-text: #687480;
+$c-red: #F14A27;
+$effect-duration: 0.3s;
+$main-font-family: "IBM Plex Sans", sans-serif;
+$second-font-family: "Montserrat", sans-serif;
+
+
+
+
