--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
 @import 'utils';
-@import 'fonts';
 @import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import './blocks.scss/header';
+@import './blocks.scss/icons';
+@import './blocks.scss/nav';
+@import './blocks.scss/arrows';
+@import './blocks.scss/menu';
+@import './blocks.scss/container';
+@import './blocks.scss/schedule';
+@import './blocks.scss/page';
+@import './blocks.scss/events';
+@import './blocks.scss/gallery';
+@import './blocks.scss/slider';
+@import './blocks.scss/section';
+@import './blocks.scss/button';
+@import './blocks.scss/subscription';
+@import './blocks.scss/footer';
