--- a/src/styles/blocks.scss/menu.scss
+++ b/src/styles/blocks.scss/menu.scss
@@ -58,8 +58,7 @@
 
     &--list {
       padding-left: 52px;
-      row-gap: 24px;
-      column-gap: 28px;
+      gap: 24px;
 
       @include on-tablet {
         padding-left: 62px;
@@ -83,6 +82,7 @@
 
       &::after {
         @include after-line;
+        
         background-color: $c-white;
       }
 
