--- a/src/styles/blocks.scss/slider.scss
+++ b/src/styles/blocks.scss/slider.scss
@@ -43,11 +43,11 @@
   }
 
 
-#slide1:checked ~ .gallery__slides {
+.slide1:checked ~ .gallery__slides {
   transform: translateX(0%);
 }
 
-#slide2:checked ~ .gallery__slides {
+.slide2:checked ~ .gallery__slides {
   transform: translateX(-100%);
 
   @include on-tablet {
@@ -55,7 +55,7 @@
   }
 }
 
-#slide3:checked ~ .gallery__slides {
+.slide3:checked ~ .gallery__slides {
   transform: translateX(-200%);
 
   @include on-tablet {
@@ -64,7 +64,7 @@
 
 }
 
-#slide4:checked ~ .gallery__slides {
+.slide4:checked ~ .gallery__slides {
   transform: translateX(-300%);
 
   @include on-tablet {
@@ -72,10 +72,10 @@
   }
 }
 
-#slide1:checked ~ .slider__navigation .slider__point[for="slide1"],
-#slide2:checked ~ .slider__navigation .slider__point[for="slide2"],
-#slide3:checked ~ .slider__navigation .slider__point[for="slide3"],
-#slide4:checked ~ .slider__navigation .slider__point[for="slide4"] {
+.slide1:checked ~ .slider__navigation .slider__point[for="slide1"],
+.slide2:checked ~ .slider__navigation .slider__point[for="slide2"],
+.slide3:checked ~ .slider__navigation .slider__point[for="slide3"],
+.slide4:checked ~ .slider__navigation .slider__point[for="slide4"] {
   background-color: $c-green;
 }
 
