--- a/src/styles/utils/_reset.scss
+++ b/src/styles/utils/_reset.scss
@@ -10,8 +10,11 @@
   box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+  cursor: pointer;
+}
 
-a,
 a:link,
 a:visited,
 a:hover {
@@ -23,6 +26,7 @@ ul li {
   list-style: none;
 }
 
-a, button, label {
+button,
+label {
   cursor: pointer;
 }
