--- a/src/styles/blocks.scss/events.scss
+++ b/src/styles/blocks.scss/events.scss
@@ -2,7 +2,7 @@
   &__title {
     text-align: center;
     width: 300px;
-    margin: 70px auto 40px auto;
+    margin: 70px auto 40px;
 
     @include on-tablet {
       text-align: left;
@@ -17,6 +17,7 @@
 
   &__content {
     @include page-grid;
+
     row-gap: 60px;
 
     @include on-desktop {
@@ -25,20 +26,9 @@
   }
 }
 
-.events .event:last-of-type {
-
-  @include on-tablet {
-    padding-inline: 34px;
-  }
-
-  @include on-desktop {
-    padding-inline: 0;
-  }
-
-}
-
 .event {
   grid-column: 1 / -1;
+
   @include page-grid;
 
   &__image {
@@ -185,7 +175,7 @@
   }
 
   &:last-of-type .event__text {
-    box-shadow: 0px 2px 0px 0px #1A5A4C40;
+    box-shadow: 0 2px 0 0 #1A5A4C40;
     background-color: $c-white;
     transform: translateY(-60px);
     width: 100%;
@@ -215,6 +205,17 @@
     @include on-desktop {
       padding-left: 100px;
     }
- }
+  }
+}
+
+.events .event:last-of-type {
+  @include on-tablet {
+    padding-inline: 34px;
+  }
+
+  @include on-desktop {
+    padding-inline: 0;
+  }
+
 }
 
