--- a/src/styles/blocks.scss/events.scss
+++ b/src/styles/blocks.scss/events.scss
@@ -216,6 +216,13 @@
   @include on-desktop {
     padding-inline: 0;
   }
-
 }
+
+.events .event:not(:last-child) {
+  @include on-desktop {
+    max-width: 1280px;
+    width: 100%;
+  }
+}
+
 
