--- a/src/styles/blocks.scss/footer.scss
+++ b/src/styles/blocks.scss/footer.scss
@@ -80,6 +80,9 @@
     &--link {
       color: $c-black;
       display: inline-block;
+      position: relative;
+
+      @include hover(font-weight, 600);
     }
   }
 
