--- a/src/styles/blocks.scss/gallery.scss
+++ b/src/styles/blocks.scss/gallery.scss
@@ -2,6 +2,12 @@
 .gallery {
   text-align: center;
 
+  @include on-desktop {
+    max-width: 1280px;
+    width: 100%;
+    margin: 0 auto;
+  }
+
   &__title {
     margin-block: 40px;
 
@@ -72,5 +78,6 @@
     transform: scale(1.04);
   }
 }
+
 
 
