--- a/src/styles/blocks.scss/header.scss
+++ b/src/styles/blocks.scss/header.scss
@@ -32,7 +32,7 @@
 
     @include on-desktop {
       width: 56.6%;
-      height: 655px;
+      height: 674px;
     }
   }
 
@@ -58,6 +58,7 @@
       font-size: 72px;
       line-height: 86.4px;
       margin: 119px 0 89px;
+      max-width: 470px;
     }
   }
 
@@ -78,8 +79,6 @@
       transform: rotate(180deg);
       grid-column: 1 / 2;
       grid-row: 3 / 4;
-
-      animation: animation-rotate 6s linear 1;
 
       &::before {
         content: '';
