--- a/src/styles/blocks.scss/page.scss
+++ b/src/styles/blocks.scss/page.scss
@@ -3,6 +3,7 @@
   line-height: 100%;
   font-size: 16px;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 
   &__body {
     background-color: $c-white;
