--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -107,6 +107,12 @@
       font-weight: 500;
       transform: rotate(270deg);
     }
+
+    @include on-design {
+      position: relative;
+      left: -25rem;
+      top: 1rem;
+    }
   }
 
   &__desktop-content {
