--- a/src/styles/components/page.scss
+++ b/src/styles/components/page.scss
@@ -9,6 +9,12 @@
   &__body {
     margin: 0;
     background: $c-gray;
+
+    @include on-design {
+      max-width: 1440px;
+      margin: 0 auto;
+      position: relative;
+    }
   }
 
   &__menu {
