full-width for img

--- a/src/styles/blocks/actions.scss
+++ b/src/styles/blocks/actions.scss
@@ -1,12 +1,10 @@
 .actions {
-  padding-bottom: 10rem;
+  padding-bottom: 60px;
+
+  @include max-width;
 
   @include on-tablet {
-    padding-bottom: 15rem;
-  }
-
-  @include on-desktop {
-    padding-bottom: 20rem;
+    padding-bottom: 110px;
   }
 
   &__container {
@@ -53,7 +51,7 @@
       }
 
       @include on-design {
-        transform: translate(65%, 40%);
+        transform: translate(75%, 40%);
       }
     }
   }
@@ -168,5 +166,17 @@
     line-height: 24px;
     text-align: left;
     color: $c-text;
+  }
+}
+
+.actions-roman {
+  padding-bottom: 183px;
+
+  @include on-tablet {
+    padding-bottom: 208px;
+  }
+
+  @include on-desktop {
+    padding-bottom: 302px;
   }
 }
