--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -2,6 +2,8 @@
   padding-block: 50px;
   font-size: 14px;
 
+  @include max-width;
+
   &__content {
     @include on-tablet {
       @include grid;
