--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -2,6 +2,8 @@
   z-index: 1;
   padding-block: 9px 70px;
 
+  @include max-width;
+
   &__bottom {
     @include on-tablet {
       display: flex;
@@ -72,6 +74,14 @@
 
     @include on-desktop {
       margin-top: 89px;
+    }
+
+    &:hover {
+      border-color: $c-text;
+    }
+
+    &:hover::after {
+      background-color: $c-text;
     }
 
     &::after {
