--- a/src/styles/components/page.scss
+++ b/src/styles/components/page.scss
@@ -11,8 +11,8 @@
     background: $c-gray;
 
     @include on-design {
-      max-width: 1440px;
-      margin: 0 auto;
+      // max-width: 1440px;
+      // margin: 0 auto;
       position: relative;
     }
   }
@@ -42,6 +42,14 @@
     background-color: $c-button-green;
     padding: 27px 20px;
   }
+
+  // &__full-width {
+  //   width: 100vw;
+  //   left: 50%;
+  //   right: 50%;
+  //   margin-left: -50vw;
+  //   margin-right: -50vw;
+  // }
 }
 
 .container {
