--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,28 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import './block/header';
+@import './block/page';
+@import './block/icon';
+@import './block/button';
+@import './block/events';
+@import './block/section-title';
+@import './block/event';
+@import './block/date';
+@import './block/text';
+@import './block/romanticism';
+@import './block/description';
+@import './block/gallery';
+@import './block/subscription';
+@import './block/form';
+@import './block/nav';
+@import './block/menu';
+@import './block/worktime';
+@import './block/contacts';
+@import './block/worktime-bottom';
+@import './block/contact';
+@import './block/go_top';
+@import './block/footer';
 
 body {
   background: $c-gray;
