--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,11 @@
 $c-gray: #eee;
+$tabet-min-width: 640px;
+$desctop-min-width: 1280px;
+$design-min-width: 1440px;
+$color-white: #fff;
+$green-color: #1a5a4c;
+$grey: #C4C4C4;
+$color-black: #0F0E08;
+$color-dark-grey: #687480;
+$red-color: #F14A27;
+$color-description: #4E4E4E;
