--- a/src/styles/block/contacts.scss
+++ b/src/styles/block/contacts.scss
@@ -60,7 +60,7 @@
     @include on-tablet {
       grid-column: 2 / 4;
 
-      padding-top: 0px;
+      padding-top: 0;
     }
 
     @include on-desctop {
@@ -76,7 +76,7 @@
     @include on-tablet {
       grid-column: 4 / 6;
 
-      padding-top: 0px;
+      padding-top: 0;
     }
 
     @include on-desctop {
@@ -99,7 +99,6 @@
 
       border-top: none;
       border-left: 1px solid $green-color;
-      margin: 0;
       width: 1px;
       margin: 0 35px;
     }
