--- a/src/styles/block/text.scss
+++ b/src/styles/block/text.scss
@@ -1,7 +1,7 @@
 .text {
   &__title {
     margin: 0;
-    font-family: Montserrat;
+    font-family: Montserrat, sans-serif;
     font-size: 28px;
     line-height: 28px;
     text-align: left;
