--- a/src/styles/block/description.scss
+++ b/src/styles/block/description.scss
@@ -11,7 +11,7 @@
     justify-content: space-between;
     align-items: center;
     margin: 0;
-    padding: 20px 20px;
+    padding: 20px;
 
     @include on-tablet {
       padding: 45px 55px 16px;
@@ -31,7 +31,7 @@
     padding-bottom: 20px;
     margin: 0;
 
-    font-family: 'Montserrat', sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 28px;
     font-weight: 100;
     line-height: 28px;
