--- a/src/styles/block/form.scss
+++ b/src/styles/block/form.scss
@@ -18,7 +18,7 @@
     color: $color-dark-grey;
     font-size: 14px;
     line-height: 14px;
-    font-family:  'Montserrat', sans-serif;
+    font-family: Montserrat, sans-serif;
     font-weight: 400;
     text-align: left;
     outline: none;
