--- a/src/styles/block/romanticism.scss
+++ b/src/styles/block/romanticism.scss
@@ -10,7 +10,7 @@
 
     background-color: $color-white;
     margin: 153px 0 100px;
-    box-shadow: 0px 2px 0px 0px #1A5A4C40;
+    box-shadow: 0 2px 0 0 #1A5A4C40;
 
     @include on-tablet {
       margin: -106px 0 88px;
