--- a/src/styles/block/subscription.scss
+++ b/src/styles/block/subscription.scss
@@ -10,7 +10,7 @@
   &__title {
     grid-column: 1 / -1;
 
-    font-family: 'Montserrat', sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 36px;
     font-weight: 700;
     line-height: 36px;
