--- a/src/styles/block/events.scss
+++ b/src/styles/block/events.scss
@@ -1,19 +1,21 @@
 .events {
   @include page-grid;
-  
+
   grid-column: 1 / -1;
 
   &__title {
-    margin: 0;
+    margin: 70px 0 0;
     padding-bottom: 40px;
 
     grid-column: 1 / -1;
 
     @include on-tablet {
+      margin-top: 88px;
       padding-bottom: 48px;
     }
 
     @include on-desctop {
+      margin-bottom: 80px;
       padding-bottom: 56px;
 
       grid-column: 1 / 6;
