--- a/src/styles/block/events.scss
+++ b/src/styles/block/events.scss
@@ -10,12 +10,12 @@
     grid-column: 1 / -1;
 
     @include on-tablet {
-      margin-top: 88px;
+      margin: 88px 0 0;
       padding-bottom: 48px;
     }
 
     @include on-desctop {
-      margin-bottom: 80px;
+      margin: 80px 0 0;
       padding-bottom: 56px;
 
       grid-column: 1 / 6;
