add task solution

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,13 @@
-$c-gray: #eee;
+$accent-color: #1a5a4c;
+$subscription-color: #f14a27;
+$primary-white-color: #fff;
+$event-description-color: #4e4e4e;
+$current-events-data-color: #1a5a4c;
+$current-events-name-color: #687480;
+$current-events-title-color: #0f0e08;
+$slider-button-color: #e0e0e0;
+$title-font: Montserrat, sans-serif;
+$text-font: IBM Plex Sans, sans-serif;
+$transition: 300ms ease;
+$tablet-min-width: 768px;
+$desktop-min-width: 1280px;
