--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,5 +1,7 @@
+@import 'https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;200;300;400;500;600;700&family=Montserrat:wght@100..900&display=swap';
+
 @font-face {
-  font-family: Roboto, Arial, Helvetica, sans-serif;
+  font-family: 'IBM Plex Sans', Montserrat, sans-serif;
   src: url('../fonts/Roboto-Regular-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
