--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,26 @@
 %h1 {
-  font-family: Roboto, sans-serif;
-  font-weight: 400;
+  font-family: Montserrat, sans-serif;
+  font-size: 45px;
+  font-weight: 700;
+  line-height: 45px;
+  text-transform: uppercase;
+}
+
+%h2 {
+  font-family: Montserrat, sans-serif;
+  font-size: 36px;
+  line-height: 36px;
+  font-weight: 700;
+
+  @include on-tablet {
+    font-size: 48px;
+    line-height: 48px;
+  }
+}
+
+%footer-text {
+  text-align: center;
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 17px;
 }
