--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -10,9 +10,11 @@
   }
 
   &__info-field {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
+    @include on-tablet {
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+    }
 
     @include on-desktop {
       padding-bottom: 87px;
@@ -116,6 +118,7 @@
 
   &__schedule-list {
     color: $current-events-title-color;
+    padding-right: 20px;
 
     &--title {
       margin-bottom: 20px;
@@ -129,6 +132,10 @@
 
     &--text {
       margin-top: 30px;
+    }
+
+    @include on-tablet {
+      padding-right: 0;
     }
 
     @include on-desktop {
