--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,20 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import './utils/blocks/header';
+@import './utils/blocks/icon';
+
+* {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  box-sizing: border-box;
+
+}
 
 body {
-  background: $c-gray;
+  background: $bg-color;
+  font-family: Montserrat;
+  font-weight: 700;
+  color: $t-color;
 }
