--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,15 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin onTablet {
+  @media (max-width: $tablet-max-width) {
+    @content;
+  }
+}
+
+@mixin onPhone {
+  @media (max-width: $mobile-max-width) {
+    @content;
+  }
+}
