--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,12 @@
-$c-gray: #eee;
+$bg-color: #fff;
+$t-color: #0f0e08;
+$g-color: #1a5a4c;
+$e-color: #687480;
+$tablet-max-width: 1279px;
+$mobile-max-width: 670px;
+$max-content-width: 1440px;
+$d-columns: 12;
+$t-columns: 6;
+$m-columns: 2;
+$g-gap: 30px;
+
