--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,12 +9,11 @@
   padding: 0;
   text-decoration: none;
   box-sizing: border-box;
-
 }
 
 body {
   background: $bg-color;
-  font-family: Montserrat;
+  font-family: Montserrat, Arial, sans-serif;
   font-weight: 700;
   color: $t-color;
 }
