--- a/src/styles/utils/blocks/header.scss
+++ b/src/styles/utils/blocks/header.scss
@@ -81,8 +81,20 @@
 
   &__bg {
     grid-column: 6 / -1;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    gap: 30px;
     background-image: url(../images/museum.jpg);
     background-repeat: no-repeat;
+    z-index: -1;
+  }
+
+  &__bg-t {
+    grid-column: 1 / 3;
+    display: flex;
+    justify-content: center;
+    height: max-content;
+    padding-top: 15px;
   }
 }
 
@@ -113,6 +125,7 @@
     }
 
     &__bg {
+      grid-template-columns: repeat(3, 1fr);
       grid-column: 4 / -1;
       background-size: cover;
       background-position: center;
@@ -129,13 +142,10 @@
     padding: 0;
     &__container {
       grid-template-columns: repeat($m-columns, 1fr);
+      row-gap: 20px;
       grid-template-areas:
         'a a a'
         'b b b';
-    }
-
-    &__container {
-      row-gap: 20px;
     }
 
     &__title {
@@ -152,10 +162,15 @@
     }
 
     &__bg {
+      grid-template-columns: repeat(2, 1fr);
       grid-area: a;
       aspect-ratio: 1;
       background-position: center;
       background-size: cover;
+    }
+
+    &__bg-t {
+      padding-top: 9px;
     }
 
     &__t-text {
