--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,16 @@
+@import './utils/mixins';
+@import './utils/vars';
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import './blocks.scss/header';
+@import './blocks.scss/menu';
+@import './blocks.scss/mains';
+@import './blocks.scss/galery';
+@import './blocks.scss/footer';
+@import './blocks.scss/slider';
 
 body {
+  margin: 0;
   background: $c-gray;
 }
