--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,33 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin on-tablet {
+  @media (min-width: 640px) {
+    @content;
+  }
+}
+
+@mixin on-tabl-desk {
+  @media (min-width: 640px) and (max-width: 1279px) {
+    @content;
+  }
+}
+
+@mixin on-mob-tabl {
+  @media (min-width: 320px) and (max-width: 640px) {
+    @content;
+  }
+}
+
+@mixin on-desktop {
+  @media (min-width: 1280px) {
+    @content;
+  }
+}
+
+@mixin on-mobile {
+  @media (min-width: 320px) {
+    @content;
+  }
+}
