add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import 'header';
+@import 'art-museum';
+@import 'actual-events';
+@import 'gallery';
+@import 'sign-up';
 
 body {
-  background: $c-gray;
+  margin: 0;
+  background: white;
+}
+
+.container {
+  padding-inline: 20px;
 }
