--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,10 @@
-$c-gray: #eee;
+$tablet-min-width: 640px;
+$desktop-min-width: 1280px;
+$big-desktop-min-width: 1440px;
+$accent-color: #1a5a4c;
+$accent-color-orange: #f14a27;
+$accent-color-orange-light: #f77c64;
+$text-color: #0f0e08;
+$text-color-medium: #4e4e4e;
+$text-color-light: #687480;
+$white: #fff;
