--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -78,3 +78,17 @@ body {
 .b {
   font-weight: 600;
 }
+
+.a--m {
+  @include on-desktop {
+    display: none;
+  }
+}
+
+.a--d {
+  display: none;
+
+  @include on-desktop {
+    display: flex;
+  }
+}
