--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -84,6 +84,7 @@
           display: flex;
           flex-wrap: wrap;
           place-content: center;
+          justify-content: space-between;
           width: 100%;
 
           @include on-tablet {
