add task solution

--- a/src/styles/sign-up.scss
+++ b/src/styles/sign-up.scss
@@ -1,15 +1,65 @@
 .sign-up {
+  position: relative;
 
   &-link {
-    display: flex;
+
     width: 100%;
 
     &-photo {
       width: 100%;
       display: block;
-      // height: 390px;
+      height: 386px;
       object-fit: cover;
       object-position: center;
     }
   }
+
+  &-contact-form {
+    // position: absolute;
+    // bottom: 20px; // Задайте потрібні відступи
+    // left: 50%;
+    // transform: translateX(-50%);
+    width: 100%;
+    // display: flex;
+    // justify-content: center;
+
+    &-email {
+      width: 230px;
+      height: 50px;
+      background-color: #FFFFFF;
+      padding: 18px 24px;
+      font-family: Montserrat;
+      font-size: 14px;
+      text-align: left;
+      color: #687480;
+      cursor: pointer;
+      border: none;
+      box-sizing: border-box;
+      margin: 0;
+    }
+  }
+
+  &-red-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    border: none;
+    background-color: #F14A27;
+    margin: 0;
+  }
+}
+
+.container-for-form {
+  display: flex;
+  // flex-direction: row;
+  gap: 0;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  bottom: 88px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 0; /* Зменшення внутрішніх відступів */
 }
